--- a/home.css
+++ b/home.css
@@ -31,5 +31,21 @@
 .hasadna-title {
     font-size: 24px;
     line-height: 62px;
-    color:white;
+    color: white;
+}
+
+@media (max-width: 600px) {
+    .hidden-small {
+        display: none !important;
+    }
+}
+
+.visible-small {
+    display: none !important;
+}
+
+@media (max-width: 600px) {
+    .visible-small {
+        display: block !important;
+    }
 }
